Fix button spacing in mobile layout

--- a/web/app/style/suoritusjako-form.less
+++ b/web/app/style/suoritusjako-form.less
@@ -197,7 +197,10 @@
     }
 
     &__preview {
+      margin-right: 1rem;
+
       @media @media-full {
+        margin-right: 0;
         flex-basis: 70%;
       }
     }
